--- a/Claim System/Claim System.csproj
+++ b/Claim System/Claim System.csproj
@@ -7,4 +7,6 @@
     <RootNamespace>Claim_System</RootNamespace>
   </PropertyGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://www.schemastore.org/aspire-8.0.json" /></VisualStudio></ProjectExtensions>
+
 </Project>
